[package]
name = "vxtiktok_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
serenity = "0.12.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'